--- a/static/css/url.css
+++ b/static/css/url.css
@@ -3,18 +3,21 @@
     flex-direction: column;
     gap:1.5%;
     align-content: space-between;
+    height: 30%;
     padding-top: 4%;
 }
-.content-title{
+.url-title{
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: clamp(20px, calc(1rem + 0.5vw), 54px);
+    font-size: clamp(32px, calc(1rem + 0.5vw), 72px);
     letter-spacing: -0.02em;
     color: #000000;
     text-align: center; 
     align-self: center;
-   
+    width: 75%;
+    overflow:auto;
+    white-space: nowrap;
 }
 .item{
     position: relative;
