--- a/templates/ip.html
+++ b/templates/ip.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <div class="title-display">
-    <h1  class="content-title">  IP: {{ip_addr}} </h1>
+    <h1  id="ipAddr" class="content-title">  IP: </h1>
     <div class="input-group mb-2 search-bar">
         <input type="text" class="form-control" id="inputIP" placeholder="IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button" id="submitIP">Enter</button>
@@ -20,37 +20,37 @@
         data-title="{{ data['Geolocation']['City'] }}" ></div>
         <div class="card-body" >
             <div class="wrap">
-                <p class="text-content">Country: {{data["Geolocation"]["Country"]}}</p>
-                <p class="text-content">Region: {{data["Geolocation"]["Region"]}}</p>
-                <p class="text-content">City: {{data["Geolocation"]["City"]}}</p>
+                <p id="country" class="text-content">Country: {{data["Geolocation"]["Country"]}}</p>
+                <p id="region" class="text-content">Region: {{data["Geolocation"]["Region"]}}</p>
+                <p id="city" class="text-content">City: {{data["Geolocation"]["City"]}}</p>
             </div> 
         </div>
     </div>
     <div class="content-grid">
        <div class="item"> 
             <h3 class="text-title" >ISP: </h3>
-            <p class="text-content text-center p-top-3">{{data["ASN"]["ISP"]}} </p>
+            <p id = "isp" class="text-content text-center p-top-3">{{data["ASN"]["ISP"]}} </p>
        </div>
        <div class="item">
             <h3 class=" text-title">Organization: </h3>
-            <p class="text-content text-center p-top-3">{{data["Geolocation"]["Org"]}} </p>
+            <p id="org" class="text-content text-center p-top-3">{{data["Geolocation"]["Org"]}} </p>
        </div>
        
        <div class="item"> 
             <h3 class=" text-title" >IP Range: </h3>
-            <p class="text-content text-center p-top-3">{{data["ASN"]["Range"]}} </p>
+            <p id="range" class="text-content text-center p-top-3">{{data["ASN"]["Range"]}} </p>
        </div>
        <div class="item"> 
             <h3 class=" text-title" >HostName: </h3>
-            <p class="text-content text-center p-top-3"> {{data["Geolocation"]["Hostname"]}} </p>   
+            <p id="host" class="text-content text-center p-top-3"> {{data["Geolocation"]["Hostname"]}} </p>   
        </div>
     </div>
     <div class="content-grid">
         <div class="item"> 
             <h3 class="text-title">BlackList - HetrixTools </h3>
             <div class="wrap">
-                <h2 class="blacklist-count">{{data["HTBlacklist"]["count"]}} blacklisted count</h2>
-                <div class="blacklist-details">
+                <h2 id = "blacklistCount" class="blacklist-count">{{data["HTBlacklist"]["count"]}} blacklisted count</h2>
+                <div id = "blacklistContent" class="blacklist-details">
                     {% for site in data["HTBlacklist"]["sites"] %}
                         <p class="text-content text-center"> {{site}}, </p>
                     {% endfor %}
@@ -61,13 +61,14 @@
             <h3 class="text-title">Blacklist - VirusTotal </h3>
             <div class="wrap">
                 {% if data["VTBlacklist"]["severity"] != 'None' %}
-                    <p class="text-content text-center font-bold"> Severity : {{data["VTBlacklist"]["severity"]}} </p>
+                    <p id = "severity" class="text-content text-center font-bold"> Severity : {{data["VTBlacklist"]["severity"]}} </p>
                 {% endif %}
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Malicious:
+                    <p id="maliciousCount" class="text-content"> Malicious:
                         {% if data["VTBlacklist"]['stats']["malicious"]['count'] != 0 %}
                         <span 
+                            id = "maliciousTooltip"
                             data-bs-toggle="tooltip" 
                             data-bs-placement="top" 
                             title="{{data['VTBlacklist']['stats']['malicious']['details']}}" >
@@ -80,9 +81,10 @@
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Suspicious: 
+                    <p id = "suspiciousCount" class="text-content"> Suspicious: 
                      {% if data["VTBlacklist"]['stats']["suspicious"]['count'] != 0 %}
                     <span 
+                        id = "suspiciousTooltip"
                         data-bs-toggle="tooltip" 
                         data-bs-placement="top" 
                         title="{{data['VTBlacklist']['stats']['suspicious']['details']}}" >
@@ -96,15 +98,15 @@
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Undetected : {{data["VTBlacklist"]['stats']["undetected"]}} </p>
+                    <p id = "undetectedCount" class="text-content"> Undetected : 0 </p>
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Clear : {{data["VTBlacklist"]['stats']["harmless"]}} </p>
+                    <p id = "clearCount" class="text-content"> Clear : 0 </p>
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Timeout : {{data["VTBlacklist"]['stats']["timeout"]}} </p>
+                    <p id = "timeoutCount" class="text-content"> Timeout : 0 </p>
                 </div>           
           </div>
             
