--- a/templates/url.html
+++ b/templates/url.html
@@ -8,7 +8,7 @@
 <div class="title-display">
     <h1 id="urlLink" class="url-title"> URL: </h1>
     <div class="input-group mb-0 align-self-center w-75">
-        <input id="inputURL" type="text" class="form-control " placeholder="Enter an URL" aria-label="enter" aria-describedby="button-addon2">
+        <input id="inputURL" type="text" class="form-control " placeholder="Enter an URL" aria-label="enter"/>
         <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
     </div>
 </div>
