--- a/templates/ip.html
+++ b/templates/ip.html
@@ -2,7 +2,7 @@
 {% block title %} IP Analysis {% endblock %}
 {% block link  %} {{ url_for('static', filename='css/ip.css') }}{% endblock %}
 {% block scripts %} 
-<script src="{{ url_for('static', filename='js/google.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/google.js') }}"></script>
 <script type="module" src="{{ url_for('static', filename='js/ip.js') }}"></script>
 {% endblock %}
 {% block content %}
@@ -28,7 +28,7 @@
     <div class="content-grid">
        <div class="item"> 
             <h3 class="text-title" >ISP: </h3>
-            <p id = "isp" class="text-content text-center p-top-3"></p>
+            <p id= "isp" class="text-content text-center p-top-3"></p>
        </div>
        <div class="item">
             <h3 class=" text-title">Organization: </h3>
@@ -48,21 +48,21 @@
         <div class="item"> 
             <h3 class="text-title">BlackList - HetrixTools </h3>
             <div class="wrap">
-                <h2 id = "blacklistCount" class="blacklist-count"></h2>
+                <h2 id= "blacklistCount" class="blacklist-count"></h2>
                 <div  class="blacklist-details">
-                        <p id = "blacklistContent" class="text-content text-center"></p>
+                        <p id= "blacklistContent" class="text-content text-center"></p>
                 </div>
             </div> 
         </div>
         <div class="item" > 
             <h3 class="text-title">Blacklist - VirusTotal </h3>
             <div class="wrap">
-                <p id = "severity" class="text-content text-center font-bold"></p>
+                <p id= "severity" class="text-content text-center font-bold"></p>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="10%" height="80%">
-                    <p id="maliciousCount" class="text-content"> 
+                    <p class="text-content"> 
                         <span 
-                            id = "maliciousTooltip"
+                            id= "maliciousCount"
                             data-bs-toggle="tooltip" 
                             data-bs-placement="top" title="">
                         </span>   
@@ -70,9 +70,9 @@
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain" width="10%" height="80%">
-                    <p id = "suspiciousCount" class="text-content">
+                    <p class="text-content">
                     <span 
-                        id = "suspiciousTooltip"
+                        id= "suspiciousCount"
                         data-bs-toggle="tooltip" 
                         data-bs-placement="top" >
                     </span>   
@@ -82,15 +82,15 @@
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain" width="10%" height="80%">
-                    <p id = "undetectedCount" class="text-content"> </p>
+                    <p id= "undetectedCount" class="text-content"> </p>
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain" width="10%" height="80%">
-                    <p id = "clearCount" class="text-content"> </p>
+                    <p id= "clearCount" class="text-content"> </p>
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain" width="10%" height="80%">
-                    <p id = "timeoutCount" class="text-content"> </p>
+                    <p id= "timeoutCount" class="text-content"> </p>
                 </div>           
           </div>
             
@@ -99,5 +99,12 @@
 </div>
 {% endblock %}
 {% block googlemap %} 
-<script src="https://maps.googleapis.com/maps/api/js?key={{apikey}}&callback=initMap&libraries=maps,marker&v=weekly" async defer></script>
+<script> 
+(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+    key: "{{apikey}}",
+    v: "weekly",
+    // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+    // Add other bootstrap parameters as needed, using camel case.
+  });
+</script>
 {% endblock %}
