--- a/templates/domain.html
+++ b/templates/domain.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% block title %} Domain Analysis {% endblock %}
 {% block link  %}{{ url_for('static', filename='css/domain.css') }}{% endblock %}
-
+{% block scripts %} 
+<script type="module" src="{{ url_for('static', filename='js/google.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='js/domain.js') }}"></script>
+{% endblock %}
 {% block content %}
 <div class="title-display">
-     <h1  id="domainNm" class="content-title"> Domain: {{domain_name}}</h1>
+     <h1  id="domainNm" class="content-title">Domain: </h1>
      <div class="input-group search-bar">
         <input id = "inputDomain" type="text" class="form-control " placeholder="Enter a Domain" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button id = "submitDomain" class="btn btn-outline-secondary" type="button">Enter</button>
@@ -183,9 +186,12 @@
 </div>
 {% endblock %}
 {% block googlemap %} 
-<script src="https://maps.googleapis.com/maps/api/js?key={{apikey}}&callback=initMap&libraries=maps,marker&v=weekly" async defer></script>
-{% endblock %}
-{% block scripts %} 
-<script type="module" src="{{ url_for('static', filename='js/google.js') }}"></script>
-<script type="module" src="{{ url_for('static', filename='js/domain.js') }}"></script>
+<script>
+    (g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})({
+    key: "{{apikey}}",
+    v: "weekly",
+    // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
+    // Add other bootstrap parameters as needed, using camel case.
+  });
+</script>
 {% endblock %}
