--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
           <li><a class="dropdown-item">Domain</a></li>
           <li><a class="dropdown-item">URL</a></li>
         </ul>
-        <input type="text"  id="inputField" class="form-control input-field" aria-label="Text input with dropdown button">
+        <input type="text"  id="inputField" class="form-control input-field" placeholder="Enter here">
       </div>
 </div>
 {% endblock %}
