--- a/templates/ip.html
+++ b/templates/ip.html
@@ -8,7 +8,7 @@
 <div class="title-display">
     <h1  id="ipAddr" class="content-title">  IP: </h1>
     <div class="input-group mb-2 search-bar">
-        <input type="text" class="form-control" id="inputIP" placeholder="IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
+        <input type="text" class="form-control" id="inputIP" placeholder="Enter an IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button" id="submitIP">Enter</button>
     </div>
 </div>
