--- a/templates/url.html
+++ b/templates/url.html
@@ -22,21 +22,21 @@
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain"  width="5%" height="65%">
-            <p id = "suspiciousCount" class="text-content"> Suspicious : 0 
+            <p id = "suspiciousCount" class="text-content"> Suspicious : 
                 <p id = "suspiciousContent" class="text-content"> </p>
             </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain"  width="5%" height="65%">
-            <p id = "undetectedCount" class="text-content"> Undetected : 0 </p>
+            <p id = "undetectedCount" class="text-content"> Undetected :  </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain"  width="5%" height="65%">
-            <p id = "clearCount" class="text-content"> Clear : 0 </p>
+            <p id = "clearCount" class="text-content"> Clear :  </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain"  width="5%" height="65%">
-            <p id = "timeoutCount" class="text-content"> Timeout : 0 </p>
+            <p id = "timeoutCount" class="text-content"> Timeout :  </p>
         </div>  
     </div>
 </div>
