--- a/templates/url.html
+++ b/templates/url.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 <div class="url-title-display">
-    <h1 id="urlLink" class="url-title"> URL: </h1>
+    <h1 id="urlLink" class="url-title overflow-auto"> URL: </h1>
     <div class="input-group mb-0 align-self-center w-75">
         <input id="inputURL" type="text" class="form-control " placeholder="Enter an URL" aria-label="enter"/>
         <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
