--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,9 +4,6 @@
     flex-direction: row;
     height: 100vh;
 }
-.search-bar{
-    height: 5%;
-}
 .nav-bar{
     position: sticky;
     gap: 5%;
@@ -14,46 +11,42 @@
     max-width: 5%;
     padding-top: 5%;
     justify-content: top;
-    position: relative;
+    height: 100%;
 } 
 .nav-item{
     z-index: 9999;
     width: 110%;
-    align-content: center;
-    align-items: center;
-
 }
-
 .nav-button{
     width: 100%;
     align-self: center;
-    padding-left: 20%;
-    margin: 0% 10%;
-    
-    
+    margin: 0% 5%;
 }
 .frame{
-    position: relative;
+    position:relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     width: 95%;
     height: 100%;
-    padding-top: 1%;
-
 }
 .title{
-    /* Analysis Tool */
     color:#EBBD03;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: clamp(36px, calc(1rem + 0.5vw), 72px);
-    line-height: 20%;
-    margin-left: 3%;
-    margin-top: 1%;
-    position: relative;
+    font-size: clamp(2.25rem, calc(1rem + 1.5vw), 7.5rem);
+    padding: 1% 3% 0% 3%;
+    margin: 0%;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    margin: 1% 3% 2% 3%;
+    background: #EBBD03;
+    border-radius: 7px;
+    height: 100%;
 }
 .title-display{
     display: grid;
@@ -67,20 +60,6 @@
     font-weight: 700;
     font-size: clamp(32px, calc(1rem + 0.5vw), 68px);
     color: #000000;
-
-}
-.content{
-    display: flex;
-    box-sizing: border-box;
-    position: relative;
-    margin:2% 3%;
-    margin-top: 1.5%;
-    align-content: center;
-    background: #EBBD03;
-    border-width: 0px;
-    border-radius: 5px;
-    flex-direction: column;
-    height: 100%;
 }
 .content-grid {
     display: grid;
