--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,26 +1,38 @@
 .home-title{
-    position: relative;
-    padding-top: 15%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: clamp(48px, calc(1rem + 0.5vw), 68px); 
+    font-size: clamp(2.25rem, calc(1.7rem + 2vw), 7rem); 
     letter-spacing: -0.02em;
     color: #000000;
     text-align: center; 
-    align-self: center;
+    margin-top: 30vh;
 }
-.inputbar{
+.home-wrap{
+    display: flex;
+    flex-direction: row;
     width: 80%;
-    height: 80%;
-    justify-self: center;
-    align-items: center;
-    align-self: center;
-    padding-top: 4.5%;
-    justify-content: center;
+    margin: 0% 10%;
+    height: 10%;
 }
-.inputfield{
-    width: 85%;
-    align-self: center;
-    height: 100%;
+.home-dropdown {
+    border-radius: 12px 0px 0px 12px;
+    background-color: #848484;  
+    transition: color 0.3s ease; 
+}
+.home-dropdown:hover {
+    background-color: #3E3C44; 
+    color : #ffffff;
+}
+.home-input{
+    border-radius: 0px 12px 12px 0px;
+    width: 100%;
+}
+.home-input::placeholder{
+    font-size: clamp(0.6rem, calc(0.75rem + 0.5vw), 4rem);
+    opacity: 0.6;
+    color: #000000;
+}
+.dropdown-menu{
+    min-width: 4%;
 }
