--- a/static/css/url.css
+++ b/static/css/url.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     gap:1.5%;
-    align-content: space-between;
     height: 30%;
     padding-top: 4%;
 }
@@ -25,11 +24,11 @@
     background-color: #333332; 
     display: flex;
     flex-direction: column;
-    gap:10%;
-    margin: 2% 12%;
+    margin: 1.5% 12% 2% 12%;
     height: 100%;
 }
 ::-webkit-scrollbar {
     height: 1%;
   }
+
 
