--- a/templates/home.html
+++ b/templates/home.html
@@ -6,16 +6,14 @@
 
 {% block content %}
 <h1 class="home-title">Insert an IP, Domain or URL to start</h1>
-<div class="inputbar">
-    <div class="input-group mb-3 ">
-        <button id="dropdownButton" class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Choose</button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item">IP</a></li>
-          <li><a class="dropdown-item">Domain</a></li>
-          <li><a class="dropdown-item">URL</a></li>
-        </ul>
-        <input type="text"  id="inputField" class="form-control input-field" placeholder="Enter here">
-      </div>
+<div class="home-wrap">
+  <button id="dropdownButton" class="dropdown-toggle home-dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">Choose</button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item">IP</a></li>
+    <li><a class="dropdown-item">Domain</a></li>
+    <li><a class="dropdown-item">URL</a></li>
+  </ul>
+  <input type="text"  id="homeInput" class="home-input" placeholder="Enter here">    
 </div>
 {% endblock %}
 
