--- a/templates/ip.html
+++ b/templates/ip.html
@@ -14,8 +14,8 @@
 </div>
 
 <div class="board-display">
-    <div class="card" style=" background-color:  #333332;" >
-        <div id="map" class="card-img-top" data-lat = "25.033130" data-lng="121.567720" title="lotus"></div>
+    <div class="card" style="background-color:  #333332;" >
+        <div id="map" class="card-img-top"></div>
         <div class="card-body" >
             <div class="wrap pt-0">
                 <p id="country" class="text-content">Country: </p>
