--- a/templates/domain.html
+++ b/templates/domain.html
@@ -8,15 +8,15 @@
 {% block content %}
 <div class="title-display">
      <h1  id="domainNm" class="content-title">Domain: </h1>
-     <div class="input-group search-bar">
-        <input id = "inputDomain" type="text" class="form-control " placeholder="Enter a Domain">
-        <button id = "submitDomain" class="btn btn-outline-secondary" type="button">Enter</button>
+     <div class="search-wrap">
+        <input id = "inputDomain" type="text" class="search-input" placeholder="Enter a Domain">
+        <button id = "submitDomain" class="search-button" type="button">Enter</button>
     </div>
 </div>
 <div class="board-display">
     <div class="content-grid grid-1">
         <div class="item p-ip-addr">
-            <h3 id="ipAddr" class="text-title m-0 p-0">IP address:</h3>
+            <h3 id="ipAddr" class="text-title">IP address:</h3>
         </div>
         <div class="card" style=" background-color:  #333332;">
             <div id="map" class="card-img-top" ></div>
