--- a/templates/url.html
+++ b/templates/url.html
@@ -6,10 +6,10 @@
 {% endblock %}
 {% block content %}
 <div class="url-title-display">
-    <h1 id="urlLink" class="url-title overflow-auto"> URL: </h1>
-    <div class="input-group mb-0 align-self-center w-75 h-80">
-        <input id="inputURL" type="text" class="form-control " placeholder="Enter an URL" aria-label="enter"/>
-        <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
+    <h1 id="urlLink" class="content-title w-75"> URL: </h1>
+    <div class="search-wrap w-75">
+        <input id="inputURL" type="text" class="search-input" placeholder="Enter an URL" aria-label="enter"/>
+        <button id="submitURL" class="search-button" type="button" >Enter</button>
     </div>
 </div>
 <div class="url-item">
