--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,14 +51,33 @@
 .title-display{
     display: grid;
     grid-template-columns: 35% 1fr ; 
-    gap: 1.5%; 
+    gap: 15%; 
     padding: 2% 3% 0% 3%;
 }
 .content-title{
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: clamp(32px, calc(1rem + 0.5vw), 68px);
+    font-size: clamp(2.25rem, calc(1rem + 1.5vw), 7.5rem);
+    color: #000000;
+    display: flex;
+    flex-direction: row;
+}
+.search-wrap{
+    display: flex;
+    flex-direction: row;
+    height: 85%;
+    max-height: 8vh;
+}
+.search-input{
+    border-radius: 7px 0px 0px 7px;
+    font-size: clamp(0.6rem, calc(0.75rem + 0.5vw), 4rem);
+    width: 100%;
+  
+}
+.search-input::placeholder{
+    font-size: clamp(0.6rem, calc(0.75rem + 0.5vw), 4rem);
+    opacity: 0.6;
     color: #000000;
 }
 .content-grid {
@@ -66,12 +85,22 @@
     gap: 2%;
     grid-template-columns: repeat(auto-fit, minmax(80%, 100%));
 }
+.search-button{
+    border-radius: 0px 7px 7px 0px;
+    background-color: #848484;  
+    transition: color 0.3s ease; 
+}
+.search-button:hover {
+    background-color: #3E3C44; 
+    color : #ffffff;
+}
 .item{
     position: relative;
     border-radius: 12px;
     background-color: #333332; 
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap:1%;
     overflow: auto;
 }
@@ -82,14 +111,15 @@
     padding-left: 2%;
     padding-top: 2%;
     font-weight: 500;
-    font-size: clamp(24px, calc(1rem + 0.5vw), 30px);
+    font-size: clamp(1.25rem, calc(1.25rem + 0.5vw),6rem);
+    margin: 0%;
 }
 .text-content{
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: clamp(20px, calc(0.8rem + 0.5vw), 36px);
+    font-size: clamp(0.75rem, calc(0.75rem + 0.75vw), 5rem);
     text-align: left;
     padding-left: 2%;
 }
@@ -97,7 +127,7 @@
     display:grid;
     padding-top: 4%;
     grid-template-columns: repeat(auto-fit, minmax(30%, 100%));
-    height: 80%;
+    height: 100%;
 }
 .board-display{
     display: grid;
@@ -116,7 +146,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: clamp(28px, calc(0.8rem + 0.5vw), 56px);
+    font-size: clamp(1.25rem, calc(1.1rem + 0.5vw),6rem);
     text-align: center;
 }
 .blacklist-details{
