--- a/templates/ip.html
+++ b/templates/ip.html
@@ -7,9 +7,9 @@
 {% block content %}
 <div class="title-display">
     <h1  id="ipAddr" class="content-title">  IP: </h1>
-    <div class="input-group mb-2 search-bar">
-        <input type="text" class="form-control" id="inputIP" placeholder="Enter an IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
-        <button class="btn btn-outline-secondary" type="button" id="submitIP">Enter</button>
+    <div class="search-wrap">
+        <input type="text" class="search-input" id="inputIP" placeholder="Enter an IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
+        <button class="search-button" type="button" id="submitIP">Enter</button>
     </div>
 </div>
 
@@ -27,20 +27,20 @@
     <div class="content-grid">
        <div class="item"> 
             <h3 class="text-title" >ISP: </h3>
-            <p id= "isp" class="text-content text-center p-top-3"></p>
+            <p id= "isp" class="text-content text-center "></p>
        </div>
        <div class="item">
             <h3 class=" text-title">Organization: </h3>
-            <p id="org" class="text-content text-center p-top-3"></p>
+            <p id="org" class="text-content text-center"></p>
        </div>
        
        <div class="item"> 
             <h3 class=" text-title" >IP Range: </h3>
-            <p id="range" class="text-content text-center p-top-3"></p>
+            <p id="range" class="text-content text-center"></p>
        </div>
        <div class="item"> 
             <h3 class=" text-title" >HostName: </h3>
-            <p id="host" class="text-content text-center p-top-3"></p>   
+            <p id="host" class="text-content text-center"></p>   
        </div>
     </div>
     <div class="content-grid">
