--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
+    overflow: scroll;
 }
 .nav-bar{
     position: sticky;
@@ -169,6 +170,9 @@
 }
 .w-75{
     width: 75%;
+}
+.h-75{
+    height: 75%;
 }
 .m-bottom-05{
     margin-bottom: 0.5%;
