--- a/static/css/url.css
+++ b/static/css/url.css
@@ -7,7 +7,13 @@
     align-items: center;
     justify-content: center;
 }
-
+.url-title{
+    width: 75%;
+    height: 75%;
+    overflow-x: auto;
+    display: inline-block;
+    white-space: nowrap;
+}
 .url-item{
     position: relative;
     border-radius: 12px;
