--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,6 +41,18 @@
     padding: 1% 3% 0% 3%;
     margin: 0%;
 }
+.title-display{
+    display: grid;
+    grid-template-columns: 35% 1fr ; 
+    gap: 1.5%; 
+    padding: 2% 3% 0% 3%;
+}
+.content-title{
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: clamp(32px, calc(1rem + 0.5vw), 68px);
+}                
 .content{
     display: flex;
     flex-direction: column;
@@ -74,12 +86,20 @@
     border-radius: 7px 0px 0px 7px;
     font-size: clamp(0.6rem, calc(0.75rem + 0.5vw), 4rem);
     width: 100%;
-  
 }
 .search-input::placeholder{
     font-size: clamp(0.6rem, calc(0.75rem + 0.5vw), 4rem);
     opacity: 0.6;
     color: #000000;
+}
+.search-button{
+    border-radius: 0px 7px 7px 0px;
+    background-color: #848484;  
+    transition: color 0.3s ease; 
+}
+.search-button:hover {
+    background-color: #3E3C44; 
+    color : #ffffff;
 }
 .content-grid {
     display: grid;
