--- a/templates/ip.html
+++ b/templates/ip.html
@@ -17,7 +17,7 @@
     <div class="card" style="background-color:  #333332;" >
         <div id="map" class="card-img-top"></div>
         <div class="card-body" >
-            <div class="wrap pt-0">
+            <div class="card-text">
                 <p id="country" class="text-content">Country: </p>
                 <p id="region" class="text-content">Region: </p>
                 <p id="city" class="text-content">City: </p>
