--- a/static/css/base.css
+++ b/static/css/base.css
@@ -60,6 +60,7 @@
     background: #EBBD03;
     border-radius: 7px;
     height: 100%;
+    padding-bottom: 1.5%;
 }
 .title-display{
     display: grid;
