--- a/templates/domain.html
+++ b/templates/domain.html
@@ -148,6 +148,7 @@
         <div class="item" > 
             <h3 class="text-title">Blacklist - VirusTotal </h3>
             <div class="wrap">
+                <p id= "severity" class="text-content text-center font-bold"></p>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="10%" height="80%">
                     <p id="maliciousCount" class="text-content m-bottom-05">
