--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 .bg {
-    background: #232423;
+    background: #293241;
     display: flex;
     flex-direction: row;
     height: 100vh;
@@ -8,7 +8,7 @@
 .nav-bar{
     position: sticky;
     gap: 5%;
-    background: #d3d3d3;
+    background: #A0A1A4;
     max-width: 5%;
     padding-top: 5%;
     justify-content: top;
@@ -33,7 +33,7 @@
     height: 100%;
 }
 .title{
-    color:#EBBD03;
+    color:#98c1d9;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     margin: 1% 3% 2% 3%;
-    background: #EBBD03;
+    background: #98c1d9;
     border-radius: 7px;
     height: 100%;
     padding-bottom: 1.5%;
@@ -109,7 +109,7 @@
 }
 .search-button{
     border-radius: 0px 7px 7px 0px;
-    background-color: #848484;  
+    background-color: #A0A1A4;  
     transition: color 0.3s ease; 
 }
 .search-button:hover {
@@ -119,7 +119,7 @@
 .item{
     position: relative;
     border-radius: 12px;
-    background-color: #333332; 
+    background-color: #293241; 
     display: flex;
     flex-direction: column;
     justify-content: center;
